# sigmos

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  update-precommit.yml
scripts/: configure.sh  update.sh
sigmos/: __init__.py  __main__.py  _estimator.py  _sigmos.py  cli.py
tests/: conftest.py  test_cli.py  test_sigmos.py
